# pyo3-iceoryx2

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/pair/: main.py  pair0.py  pair1.py
examples/pubsub/: main.py  pub.py  sub.py
py_src/pyo3_iceoryx2/: __init__.py  _testing.py  events.py  pair.py  pubsub.py
src/: event.rs  globals.rs  lib.rs  proxies.rs  pubsub.rs  utils.rs
tests/: common.py  pub.py  sub.py
