[project]
name = "pyo3-iceoryx2"
version = "0.2.0"
description = ""
authors = [{ name = "Guillermo Rodriguez", email = "guillermo@telos.net" }]
requires-python = ">=3.9"
dependencies = [
    "maturin>=1.8.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "py_src"
module-name = "pyo3_iceoryx2._lowlevel"